--- a/src/client/styles/header.scss
+++ b/src/client/styles/header.scss
@@ -1,5 +1,7 @@
-header {
-    display: flex;
-    justify-content: space-between;
-    padding: 10px 40px;
+body{
+    header {
+        display: flex;
+        justify-content: space-between;
+        padding: 10px 40px;
+    }
 }
