--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -33,6 +33,11 @@
                 <strong>Form Results:</strong>
                 <div id="results"></div>
             </section>
+
+            <section>
+                <button onclick="Client.showCoffeeFlavs()">Click for Coffee Flavors</button>
+                <ul id="coffeeList"></ul>
+            </section>
         </main>
 
         <footer>
